fixed jumping on fetch and added a permanent visible scrollbar because of jumping on page change

--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -25,7 +25,6 @@ nav {
     padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    height: 60px;
 }
 
 main {
