--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,8 @@
+body {
+    overflow-y: scroll;
+    overflow-x: auto;
+}
+
 .subs {
     font-size: 12px;
 }
